--- a/optiver-trading-at-the-close/Optiver.ipynb
+++ b/optiver-trading-at-the-close/Optiver.ipynb
@@ -9,23 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import tensorflow as tf\n",
     "import gc\n",
+    "import joblib\n",
     "\n",
+    "import seaborn as sns\n",
     "from sklearn import set_config\n",
     "from sklearn.preprocessing import FunctionTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.model_selection import TimeSeriesSplit\n",
     "from sklearn.metrics import mean_absolute_error\n",
-    "from xgboost import XGBRegressor\n",
     "from catboost import CatBoostRegressor\n"
    ]
   },
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,23 +93,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "863"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train = pd.read_csv('/Users/charliemarchal/Desktop/Kaggle_challenge/Optiver_challenge/optiver-trading-at-the-close/train.csv', dtype=dtypes) #.drop(['row_id', 'time_id'], axis=1)\n",
-    "test = pd.read_csv('Optiver_challenge/optiver-trading-at-the-close/example_test_files/test.csv', dtype=dtypes).drop(['row_id', 'time_id'], axis=1)\n",
+    "train = pd.read_csv('train.csv', dtype=dtypes).drop(['row_id', 'time_id'], axis=1)\n",
+    "test = pd.read_csv('example_test_files/test.csv', dtype=dtypes).drop(['row_id', 'time_id'], axis=1)\n",
     "train.shape\n",
     "\n",
     "# Memory cleanup\n",
@@ -126,30 +125,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Missing Values in Each Column:\n",
-      " stock_id                         0\n",
-      "date_id                          0\n",
-      "seconds_in_bucket                0\n",
-      "imbalance_size                 220\n",
-      "imbalance_buy_sell_flag          0\n",
-      "reference_price                220\n",
-      "matched_size                   220\n",
-      "far_price                  2894342\n",
-      "near_price                 2857180\n",
-      "bid_price                      220\n",
-      "bid_size                         0\n",
-      "ask_price                      220\n",
-      "ask_size                         0\n",
-      "wap                            220\n",
-      "target                          88\n",
-      "dtype: int64\n",
       "\n",
       "Percentage of Missing Values in Each Column:\n",
       " stock_id                    0.000000\n",
@@ -186,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,30 +186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Missing Values in Each Column:\n",
-      " stock_id                       0\n",
-      "date_id                        0\n",
-      "seconds_in_bucket              0\n",
-      "imbalance_size                 0\n",
-      "imbalance_buy_sell_flag        0\n",
-      "reference_price                0\n",
-      "matched_size                   0\n",
-      "far_price                  18229\n",
-      "near_price                 18000\n",
-      "bid_price                      0\n",
-      "bid_size                       0\n",
-      "ask_price                      0\n",
-      "ask_size                       0\n",
-      "wap                            0\n",
-      "currently_scored               0\n",
-      "dtype: int64\n",
       "\n",
       "Percentage of Missing Values in Each Column:\n",
       " stock_id                    0.000000\n",
@@ -244,7 +209,6 @@
       "ask_price                   0.000000\n",
       "ask_size                    0.000000\n",
       "wap                         0.000000\n",
-      "currently_scored            0.000000\n",
       "dtype: float64\n"
      ]
     }
@@ -260,6 +224,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nan_handler(data):\n",
+    "    data_copy = data.copy()\n",
+    "    # Replace infinite values with NaN\n",
+    "    data_copy.replace([np.inf, -np.inf], np.nan, inplace=True)\n",
+    "    for column in data_copy.columns:\n",
+    "        if data_copy[column].isnull().any():\n",
+    "            data_copy[column].fillna(data_copy[column].median(), inplace=True)\n",
+    "    return data_copy"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -268,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +288,7 @@
        " 'time_of_day']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,12 +353,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define your feature engineering transformer\n",
     "FeatureEngineering = FunctionTransformer(create_features)\n",
+    "Feature_cleaning = FunctionTransformer(nan_handler)\n",
     "\n",
     "# Initialize the CatBoost Regressor\n",
     "catboost_model = CatBoostRegressor(\n",
@@ -396,19 +377,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average Training MAE: 6.0338256714286\n",
-      "Average Validation MAE: 6.674814160842667\n"
+     "ename": "KeyError",
+     "evalue": "\"['bid_ask_size_imbalance', 'matched_imbalance_ratio', 'ask_price_bid_price_diff', 'ask_price_bid_price_ratio', 'ask_price_far_price_diff', 'ask_price_far_price_ratio', 'ask_price_near_price_diff', 'ask_price_near_price_ratio', 'bid_price_far_price_diff', 'bid_price_far_price_ratio', 'bid_price_near_price_diff', 'bid_price_near_price_ratio', 'far_price_near_price_diff', 'far_price_near_price_ratio', 'price_mean', 'price_std', 'time_of_day'] not in index\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/home/hugefelix/HEC/kaggle_challenge/optiver-trading-at-the-close/Optiver.ipynb Cell 24\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/hugefelix/HEC/kaggle_challenge/optiver-trading-at-the-close/Optiver.ipynb#X30sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m X \u001b[39m=\u001b[39m train[[\u001b[39m'\u001b[39m\u001b[39mstock_id\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mseconds_in_bucket\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mimbalance_size\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mimbalance_buy_sell_flag\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mreference_price\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mmatched_size\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mfar_price\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mnear_price\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mbid_price\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mbid_size\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mask_price\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mask_size\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mwap\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mbid_ask_size_imbalance\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mmatched_imbalance_ratio\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mask_price_bid_price_diff\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mask_price_bid_price_ratio\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mask_price_far_price_diff\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mask_price_far_price_ratio\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mask_price_near_price_diff\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mask_price_near_price_ratio\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mbid_price_far_price_diff\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mbid_price_far_price_ratio\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mbid_price_near_price_diff\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mbid_price_near_price_ratio\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mfar_price_near_price_diff\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mfar_price_near_price_ratio\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mprice_mean\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mprice_std\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mtime_of_day\u001b[39m\u001b[39m'\u001b[39m]]\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/hugefelix/HEC/kaggle_challenge/optiver-trading-at-the-close/Optiver.ipynb#X30sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m y \u001b[39m=\u001b[39m train[\u001b[39m'\u001b[39m\u001b[39mtarget\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/hugefelix/HEC/kaggle_challenge/optiver-trading-at-the-close/Optiver.ipynb#X30sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Proceed with TimeSeriesSplit and model training\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda3/envs/llm_felix_1/lib/python3.11/site-packages/pandas/core/frame.py:3902\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3900\u001b[0m     \u001b[39mif\u001b[39;00m is_iterator(key):\n\u001b[1;32m   3901\u001b[0m         key \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(key)\n\u001b[0;32m-> 3902\u001b[0m     indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39m_get_indexer_strict(key, \u001b[39m\"\u001b[39m\u001b[39mcolumns\u001b[39m\u001b[39m\"\u001b[39m)[\u001b[39m1\u001b[39m]\n\u001b[1;32m   3904\u001b[0m \u001b[39m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[1;32m   3905\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mgetattr\u001b[39m(indexer, \u001b[39m\"\u001b[39m\u001b[39mdtype\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m) \u001b[39m==\u001b[39m \u001b[39mbool\u001b[39m:\n",
+      "File \u001b[0;32m~/miniconda3/envs/llm_felix_1/lib/python3.11/site-packages/pandas/core/indexes/base.py:6114\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[0;34m(self, key, axis_name)\u001b[0m\n\u001b[1;32m   6111\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   6112\u001b[0m     keyarr, indexer, new_indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[0;32m-> 6114\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_raise_if_missing(keyarr, indexer, axis_name)\n\u001b[1;32m   6116\u001b[0m keyarr \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtake(indexer)\n\u001b[1;32m   6117\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, Index):\n\u001b[1;32m   6118\u001b[0m     \u001b[39m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda3/envs/llm_felix_1/lib/python3.11/site-packages/pandas/core/indexes/base.py:6178\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[0;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[1;32m   6175\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNone of [\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m] are in the [\u001b[39m\u001b[39m{\u001b[39;00maxis_name\u001b[39m}\u001b[39;00m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   6177\u001b[0m not_found \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[39m.\u001b[39mnonzero()[\u001b[39m0\u001b[39m]]\u001b[39m.\u001b[39munique())\n\u001b[0;32m-> 6178\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mnot_found\u001b[39m}\u001b[39;00m\u001b[39m not in index\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"['bid_ask_size_imbalance', 'matched_imbalance_ratio', 'ask_price_bid_price_diff', 'ask_price_bid_price_ratio', 'ask_price_far_price_diff', 'ask_price_far_price_ratio', 'ask_price_near_price_diff', 'ask_price_near_price_ratio', 'bid_price_far_price_diff', 'bid_price_far_price_ratio', 'bid_price_near_price_diff', 'bid_price_near_price_ratio', 'far_price_near_price_diff', 'far_price_near_price_ratio', 'price_mean', 'price_std', 'time_of_day'] not in index\""
      ]
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "X = train[['stock_id', 'seconds_in_bucket', 'imbalance_size', 'imbalance_buy_sell_flag', 'reference_price', 'matched_size', 'far_price', 'near_price', 'bid_price', 'bid_size', 'ask_price', 'ask_size', 'wap', 'bid_ask_size_imbalance', 'matched_imbalance_ratio', 'ask_price_bid_price_diff', 'ask_price_bid_price_ratio', 'ask_price_far_price_diff', 'ask_price_far_price_ratio', 'ask_price_near_price_diff', 'ask_price_near_price_ratio', 'bid_price_far_price_diff', 'bid_price_far_price_ratio', 'bid_price_near_price_diff', 'bid_price_near_price_ratio', 'far_price_near_price_diff', 'far_price_near_price_ratio', 'price_mean', 'price_std', 'time_of_day']]\n",
     "y = train['target']\n",
     "\n",
@@ -449,8 +438,105 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_model_to_save = Pipeline([\n",
+    "    ('nan_handling', Feature_cleaning),\n",
+    "    ('trained_model', final_model)\n",
+    "\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['trained_model.pkl']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(final_model, 'trained_model.pkl')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-2.37462619, -0.38397499,  2.40504068, ...,  0.34452756,\n",
+       "        1.66055261, -1.70658602])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_model_to_save.predict(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-2.37462619, -0.38397499,  2.40504068, ...,  0.34452756,\n",
+       "        1.66055261, -1.70658602])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_model.predict(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['trained_pipeline.pkl']"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(final_model_to_save, 'trained_pipeline.pkl')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -470,7 +556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
