inclue pre trained model loader

--- a/optiver-trading-at-the-close/Optiver.ipynb
+++ b/optiver-trading-at-the-close/Optiver.ipynb
@@ -93,16 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "863"
+       "517"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,6 +438,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Concatenate with data cleaning "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
@@ -448,26 +455,6 @@
     "    ('trained_model', final_model)\n",
     "\n",
     "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['trained_model.pkl']"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "joblib.dump(final_model, 'trained_model.pkl')\n"
    ]
   },
   {
@@ -492,24 +479,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-2.37462619, -0.38397499,  2.40504068, ...,  0.34452756,\n",
-       "        1.66055261, -1.70658602])"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "final_model.predict(test)"
+    "SAVE THE PRE TRAINED PIPELINE"
    ]
   },
   {
@@ -530,6 +503,43 @@
    ],
    "source": [
     "joblib.dump(final_model_to_save, 'trained_pipeline.pkl')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loaded_model = joblib.load('trained_pipeline.pkl')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LOAD THE PRE TRAINED MODEL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-2.37462619, -0.38397499,  2.40504068, ...,  0.34452756,\n",
+       "        1.66055261, -1.70658602])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_model.predict(test)"
    ]
   },
   {
