--- a/optiver-trading-at-the-close/Optiver_v2_Charlie.ipynb
+++ b/optiver-trading-at-the-close/Optiver_v2_Charlie.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +26,14 @@
     "from sklearn.metrics import mean_absolute_error\n",
     "from catboost import CatBoostRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from API.app.NanHandler import NanHandlerTransformer\n"
+    "from API.app.NanHandler import NanHandlerTransformer\n",
+    "from API.app.feature_creator import FeatureCreator\n",
+    "new_feature_creator = FeatureCreator()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -108,22 +110,22 @@
        "Index(['stock_id', 'date_id', 'seconds_in_bucket', 'imbalance_size',\n",
        "       'imbalance_buy_sell_flag', 'reference_price', 'matched_size',\n",
        "       'far_price', 'near_price', 'bid_price', 'bid_size', 'ask_price',\n",
-       "       'ask_size', 'wap', 'time_id', 'row_id'],\n",
+       "       'ask_size', 'wap'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv('example_test_files/test.csv').columns"
+    "test_not_clean.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -230,22 +232,12 @@
    "source": [
     "# Data Preprocessing\n",
     "scaler = StandardScaler()\n",
-    "X_scaled = scaler.fit_transform(X)"
+    "X_scaled = scaler.fit_transform(new_feature_creator.transform(X))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Split the data for validation\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X_scaled, y, test_size=0.2, shuffle=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,90 +250,47 @@
     "    verbose=False,\n",
     "    random_seed=42,\n",
     "    task_type='GPU'\n",
-    ")\n",
-    "\n",
-    "# Create a pipeline with feature engineering and CatBoost regressor\n",
-    "pipeline = Pipeline([\n",
-    "    ('feature_engineering', FunctionTransformer(create_features)),\n",
-    "    ('regressor', catboost_model)\n",
-    "])"
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Train the pipeline on the training set\n",
-    "pipeline.fit(X_train, y_train)\n",
-    "\n",
-    "# Extract the CatBoost model from the pipeline\n",
-    "trained_catboost_model = pipeline.named_steps['regressor']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Feature Importances:\n",
-      "                     Feature  Importance\n",
-      "16           bid_ask_spread   14.847419\n",
-      "23             log_ask_size    6.196293\n",
-      "22             log_bid_size    6.171686\n",
-      "6              matched_size    6.093801\n",
-      "10                 bid_size    5.978772\n",
-      "12                 ask_size    5.563982\n",
-      "4   imbalance_buy_sell_flag    5.555285\n",
-      "15               time_decay    4.914714\n",
-      "3            imbalance_size    4.682898\n",
-      "2         seconds_in_bucket    4.445976\n",
-      "1                   date_id    3.687961\n",
-      "13                      wap    3.432533\n",
-      "5           reference_price    3.120487\n",
-      "9                 bid_price    3.078296\n",
-      "8                near_price    3.013795\n",
-      "14        intraday_momentum    2.983708\n",
-      "17          imbalance_ratio    2.528111\n",
-      "19                  wap_std    2.491622\n",
-      "11                ask_price    2.310587\n",
-      "18                 wap_mean    2.245744\n",
-      "20              price_vs_ma    2.003727\n",
-      "0                  stock_id    1.796689\n",
-      "7                 far_price    1.502651\n",
-      "21                wap_lag_1    1.353263\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<catboost.core.CatBoostRegressor at 0x7f5885855610>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Get feature importances\n",
-    "feature_importances = trained_catboost_model.get_feature_importance()\n",
-    "feature_importance_df = pd.DataFrame({'Feature': X.columns, 'Importance': feature_importances})\n",
-    "sorted_feature_importance = feature_importance_df.sort_values(by='Importance', ascending=False)\n",
-    "print(\"Feature Importances:\\n\", sorted_feature_importance)"
+    "# Train the pipeline on the training set\n",
+    "catboost_model.fit(X_scaled, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Evaluation Metric (MAE): 5.974901137932725\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/hugefelix/miniconda3/envs/llm_felix_1/lib/python3.11/site-packages/sklearn/utils/validation.py:767: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if not hasattr(array, \"sparse\") and array.dtypes.apply(is_sparse).any():\n",
+      "/home/hugefelix/miniconda3/envs/llm_felix_1/lib/python3.11/site-packages/sklearn/utils/validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "/home/hugefelix/miniconda3/envs/llm_felix_1/lib/python3.11/site-packages/sklearn/utils/validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "/home/hugefelix/miniconda3/envs/llm_felix_1/lib/python3.11/site-packages/sklearn/utils/validation.py:767: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if not hasattr(array, \"sparse\") and array.dtypes.apply(is_sparse).any():\n",
       "/home/hugefelix/miniconda3/envs/llm_felix_1/lib/python3.11/site-packages/sklearn/utils/validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
       "  if is_sparse(pd_dtype):\n",
       "/home/hugefelix/miniconda3/envs/llm_felix_1/lib/python3.11/site-packages/sklearn/utils/validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
@@ -350,58 +299,173 @@
     }
    ],
    "source": [
-    "# Evaluate the pipeline on the validation set\n",
-    "predictions = pipeline.predict(X_val)\n",
-    "evaluation_metric = mean_absolute_error(y_val, predictions)\n",
-    "print(f\"Evaluation Metric (MAE): {evaluation_metric}\")"
+    "returned = pd.DataFrame(catboost_model.predict(create_features(scaler.fit_transform(nan_handler.transform(test_not_clean))))).rename(columns= {0: 'target'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hugefelix/miniconda3/envs/llm_felix_1/lib/python3.11/site-packages/sklearn/utils/validation.py:767: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if not hasattr(array, \"sparse\") and array.dtypes.apply(is_sparse).any():\n",
+      "/home/hugefelix/miniconda3/envs/llm_felix_1/lib/python3.11/site-packages/sklearn/utils/validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "/home/hugefelix/miniconda3/envs/llm_felix_1/lib/python3.11/site-packages/sklearn/utils/validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n",
+      "/home/hugefelix/miniconda3/envs/llm_felix_1/lib/python3.11/site-packages/sklearn/utils/validation.py:767: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if not hasattr(array, \"sparse\") and array.dtypes.apply(is_sparse).any():\n",
+      "/home/hugefelix/miniconda3/envs/llm_felix_1/lib/python3.11/site-packages/sklearn/utils/validation.py:605: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype):\n",
+      "/home/hugefelix/miniconda3/envs/llm_felix_1/lib/python3.11/site-packages/sklearn/utils/validation.py:614: FutureWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "  if is_sparse(pd_dtype) or not is_extension_array_dtype(pd_dtype):\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'fillna'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/hugefelix/HEC/kaggle_challenge/optiver-trading-at-the-close/Optiver_v2_Charlie.ipynb Cell 20\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/hugefelix/HEC/kaggle_challenge/optiver-trading-at-the-close/Optiver_v2_Charlie.ipynb#X56sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m pd\u001b[39m.\u001b[39mDataFrame(catboost_model\u001b[39m.\u001b[39mpredict(new_feature_creator\u001b[39m.\u001b[39mtransform(scaler\u001b[39m.\u001b[39mfit_transform(nan_handler\u001b[39m.\u001b[39mtransform(test_not_clean)))))\n",
+      "File \u001b[0;32m~/miniconda3/envs/llm_felix_1/lib/python3.11/site-packages/sklearn/utils/_set_output.py:140\u001b[0m, in \u001b[0;36m_wrap_method_output.<locals>.wrapped\u001b[0;34m(self, X, *args, **kwargs)\u001b[0m\n\u001b[1;32m    138\u001b[0m \u001b[39m@wraps\u001b[39m(f)\n\u001b[1;32m    139\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwrapped\u001b[39m(\u001b[39mself\u001b[39m, X, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m--> 140\u001b[0m     data_to_wrap \u001b[39m=\u001b[39m f(\u001b[39mself\u001b[39m, X, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[1;32m    141\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(data_to_wrap, \u001b[39mtuple\u001b[39m):\n\u001b[1;32m    142\u001b[0m         \u001b[39m# only wrap the first output for cross decomposition\u001b[39;00m\n\u001b[1;32m    143\u001b[0m         \u001b[39mreturn\u001b[39;00m (\n\u001b[1;32m    144\u001b[0m             _wrap_data_with_container(method, data_to_wrap[\u001b[39m0\u001b[39m], X, \u001b[39mself\u001b[39m),\n\u001b[1;32m    145\u001b[0m             \u001b[39m*\u001b[39mdata_to_wrap[\u001b[39m1\u001b[39m:],\n\u001b[1;32m    146\u001b[0m         )\n",
+      "File \u001b[0;32m~/HEC/kaggle_challenge/optiver-trading-at-the-close/API/app/feature_creator.py:48\u001b[0m, in \u001b[0;36mFeatureCreator.transform\u001b[0;34m(self, X, y)\u001b[0m\n\u001b[1;32m     45\u001b[0m data[\u001b[39m'\u001b[39m\u001b[39mlog_ask_size\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mlog1p(data[\u001b[39m'\u001b[39m\u001b[39mask_size\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m     47\u001b[0m \u001b[39m# Remove any infinite values created by feature engineering\u001b[39;00m\n\u001b[0;32m---> 48\u001b[0m data\u001b[39m.\u001b[39mreplace([np\u001b[39m.\u001b[39minf, \u001b[39m-\u001b[39mnp\u001b[39m.\u001b[39minf], np\u001b[39m.\u001b[39mnan, inplace\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\u001b[39m.\u001b[39mfillna(method\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mbfill\u001b[39m\u001b[39m'\u001b[39m, inplace\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m     50\u001b[0m \u001b[39mreturn\u001b[39;00m data\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'fillna'"
+     ]
+    }
+   ],
+   "source": [
+    "pd.DataFrame(catboost_model.predict(new_feature_creator.transform(scaler.fit_transform(nan_handler.transform(test_not_clean)))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-4.833314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.050859</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.113951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.937054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.251894</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32995</th>\n",
+       "      <td>-1.174585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32996</th>\n",
+       "      <td>-2.007723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32997</th>\n",
+       "      <td>0.512451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32998</th>\n",
+       "      <td>0.233574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32999</th>\n",
+       "      <td>-1.983291</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>33000 rows × 1 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([-6.89115886, -9.21927269,  0.74234636, ...,  1.22153167,\n",
-       "        8.28004053,  0.01604214])"
+       "         target\n",
+       "0     -4.833314\n",
+       "1      1.050859\n",
+       "2     -1.113951\n",
+       "3     -0.937054\n",
+       "4     -0.251894\n",
+       "...         ...\n",
+       "32995 -1.174585\n",
+       "32996 -2.007723\n",
+       "32997  0.512451\n",
+       "32998  0.233574\n",
+       "32999 -1.983291\n",
+       "\n",
+       "[33000 rows x 1 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Feature_cleaning = FunctionTransformer(nan_handler)\n",
-    "\n",
-    "\n",
-    "pre_trained_pipeline = Pipeline([\n",
-    "    ('feature_cleaning', Feature_cleaning),\n",
-    "    ('pre_trained_model', pipeline)\n",
-    "])\n",
-    "pre_trained_pipeline.predict(test_not_clean)"
+    "returned"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['API/app/models/catboost_4_5974.joblib']"
+       "['API/app/models/usable_model.joblib']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dump(pre_trained_pipeline, 'API/app/models/catboost_4_5974.joblib')"
+    "dump(catboost_model, 'API/app/models/usable_model.joblib')"
    ]
   },
   {
