--- a/optiver-trading-at-the-close/API/API_launcher.ipynb
+++ b/optiver-trading-at-the-close/API/API_launcher.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from pprint import pprint\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import json"
    ]
   },
   {
@@ -26,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'prediction': [7.49453353595527, 11.328402319097222]}\n"
+      "{'error': 'invalid input'}\n"
      ]
     }
    ],
@@ -58,7 +59,7 @@
     "   \"ask_price\":[8,5],\n",
     "   \"ask_size\":[1,2],\n",
     "   \"wap\":[7,7],\n",
-    "   \"time_id\":[5,7],\n",
+    "   \"time_id\":[5,\"cacaca\"],\n",
     "   \"row_id\":[\"0_0_0\", \"0_0_1\"]\n",
     "   }\n",
     "\"\"\"\n",
@@ -72,14 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'prediction': [7.683649161353969]}\n"
+      "{'error': 'invalid input type'}\n"
      ]
     }
    ],
@@ -88,27 +89,24 @@
     "\n",
     "headers = {\"Content-Type\": \"application/json\"}\n",
     "\n",
-    "data = \"\"\"\n",
-    "   {\n",
-    "   \"stock_id\":\"5\",\n",
-    "   \"date_id\":\"5\",\n",
-    "   \"seconds_in_bucket\":\"5\",\n",
-    "   \"imbalance_size\":\"5\",\n",
+    "data =\"\"\"{\n",
+    "   \"stock_id\":5,\n",
+    "   \"date_id\":5,\n",
+    "   \"seconds_in_bucket\":5,\n",
+    "   \"imbalance_size\":5,\n",
     "   \"imbalance_buy_sell_flag\":30,\n",
-    "   \"reference_price\":\"5\",\n",
-    "   \"matched_size\":6,\n",
-    "   \"far_price\":2,\n",
-    "   \"near_price\":\"2\",\n",
+    "   \"reference_price\":5,\n",
+    "   \"matched_size\":5,\n",
+    "   \"far_price\":5,\n",
+    "   \"near_price\":,\n",
     "   \"bid_price\":9,\n",
     "   \"bid_size\":5,\n",
-    "   \"ask_price\":8,\n",
+    "   \"ask_price\":3,\n",
     "   \"ask_size\":51,\n",
     "   \"wap\":66,\n",
     "   \"time_id\":5,\n",
     "   \"row_id\":\"0_0_0\"\n",
-    "   }\n",
-    "\"\"\"\n",
-    "\n",
+    "   }\"\"\"\n",
     "response = requests.post(url, headers=headers, data=data)\n",
     "if response.ok:\n",
     "    pprint(response.json())\n",
@@ -117,9 +115,177 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 150,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'type': '\\n   {\\n   \"stock_id\":5,\\n   \"date_id\":5,\\n   \"seconds_in_bucket\":5,\\n   \"imbalance_size\":5,\\n   \"imbalance_buy_sell_flag\":30,\\n   \"reference_price\":5,\\n   \"matched_size\":,\\n   \"far_price\":5,\\n   \"near_price\": 5,\\n   \"bid_price\":9,\\n   \"bid_size\":5,\\n   \"ask_price\":8,\\n   \"ask_size\":51,\\n   \"wap\":66,\\n   \"time_id\":5,\\n   \"row_id\":\"0_0_0\"\\n   }\\n'}"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data = {'type': '\\n'\n",
+    "         '   {\\n'\n",
+    "         '   \"stock_id\":5,\\n'\n",
+    "         '   \"date_id\":5,\\n'\n",
+    "         '   \"seconds_in_bucket\":5,\\n'\n",
+    "         '   \"imbalance_size\":5,\\n'\n",
+    "         '   \"imbalance_buy_sell_flag\":30,\\n'\n",
+    "         '   \"reference_price\":5,\\n'\n",
+    "         '   \"matched_size\":,\\n'\n",
+    "         '   \"far_price\":5,\\n'\n",
+    "         '   \"near_price\": 5,\\n'\n",
+    "         '   \"bid_price\":9,\\n'\n",
+    "         '   \"bid_size\":5,\\n'\n",
+    "         '   \"ask_price\":8,\\n'\n",
+    "         '   \"ask_size\":51,\\n'\n",
+    "         '   \"wap\":66,\\n'\n",
+    "         '   \"time_id\":5,\\n'\n",
+    "         '   \"row_id\":\"0_0_0\"\\n'\n",
+    "         '   }\\n'}\n",
+    "json_string = json.dumps(raw_data)\n",
+    "\n",
+    "# Now you can use json.loads to parse the string\n",
+    "data = json.loads(json_string)\n",
+    "\n",
+    "# for key, value in data.items():\n",
+    "#     if not value:\n",
+    "#         print(f'Empty value for key: {key}')\n",
+    "\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expression expected after dictionary key and ':' (990980665.py, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[136], line 9\u001b[0;36m\u001b[0m\n\u001b[0;31m    \"far_price\":,\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expression expected after dictionary key and ':'\n"
+     ]
+    }
+   ],
+   "source": [
+    "data ={\n",
+    "   \"stock_id\":5,\n",
+    "   \"date_id\":5,\n",
+    "   \"seconds_in_bucket\":5,\n",
+    "   \"imbalance_size\":5,\n",
+    "   \"imbalance_buy_sell_flag\":30,\n",
+    "   \"reference_price\":5,\n",
+    "   \"matched_size\":5,\n",
+    "   \"far_price\":,\n",
+    "   \"near_price\": 5,\n",
+    "   \"bid_price\":9,\n",
+    "   \"bid_size\":5,\n",
+    "   \"ask_price\":8,\n",
+    "   \"ask_size\":51,\n",
+    "   \"wap\":66,\n",
+    "   \"time_id\":5,\n",
+    "   \"row_id\":\"0_0_0\"\n",
+    "   }\n",
+    "\n",
+    "df_input = pd.DataFrame([data])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>stock_id</th>\n",
+       "      <th>date_id</th>\n",
+       "      <th>seconds_in_bucket</th>\n",
+       "      <th>imbalance_size</th>\n",
+       "      <th>imbalance_buy_sell_flag</th>\n",
+       "      <th>reference_price</th>\n",
+       "      <th>matched_size</th>\n",
+       "      <th>far_price</th>\n",
+       "      <th>near_price</th>\n",
+       "      <th>bid_price</th>\n",
+       "      <th>bid_size</th>\n",
+       "      <th>ask_price</th>\n",
+       "      <th>ask_size</th>\n",
+       "      <th>wap</th>\n",
+       "      <th>time_id</th>\n",
+       "      <th>row_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>30</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>51</td>\n",
+       "      <td>66</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0_0_0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   stock_id  date_id  seconds_in_bucket  imbalance_size  \\\n",
+       "0         5        5                  5               5   \n",
+       "\n",
+       "   imbalance_buy_sell_flag  reference_price  matched_size  far_price  \\\n",
+       "0                       30                5             5          5   \n",
+       "\n",
+       "   near_price  bid_price  bid_size  ask_price  ask_size  wap  time_id row_id  \n",
+       "0           5          9         5          8        51   66        5  0_0_0  "
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_input"
+   ]
   },
   {
    "cell_type": "code",
